--- a/05_re-design_materiais/css/custom.css
+++ b/05_re-design_materiais/css/custom.css
@@ -297,6 +297,8 @@ p {
   background-size: 100%;
 }
 
+.w-50{max-width: 50%;}
+
 @media screen and (max-width: 1440px) {
   .elemento_esq {
     left: 0%;
@@ -322,6 +324,7 @@ p {
 }
 
 @media screen and (max-width: 820px) {
+  .w-50{max-width: 100%;}
   .elemento_dir {
     margin-left: 0px;
   }
