--- a/10_jardins/css/custom.css
+++ b/10_jardins/css/custom.css
@@ -71,6 +71,7 @@ h5 {
   font-family: sourcesans-bold;
   color: #a73a31;
 }
+.w-35{max-width: 35%;}
 .w-5 {
   max-width: 50%;
   margin: auto;
@@ -373,6 +374,8 @@ p {
 }
 
 @media screen and (max-width: 820px) {
+  .w-5{max-width: 100%;}
+  .w-35{max-width: 100%;}
   .btn-estilo04,
   .btn-estilo05 {
     margin-left: 30px;
