--- a/11_projeto_jardinismo/css/custom.css
+++ b/11_projeto_jardinismo/css/custom.css
@@ -383,9 +383,12 @@ ul.marcador-verde li{
 ul.marcador-verde p{
   padding-left: 10px;
 }
-
+.w-70{max-width: 70%;}
+.w-35{max-width: 35%;}
 
 @media screen and (max-width: 820px){
+  .w-70{max-width: 100%;}
+  .w-35{max-width: 100%;}
   .div-fig09 img{height: auto;}
   .topo img{
     max-width: 100%;
