--- a/02_sustentabilidade_nos_ambientes/css/custom.css
+++ b/02_sustentabilidade_nos_ambientes/css/custom.css
@@ -261,6 +261,11 @@ button {
   margin-bottom: 50px;
 }
 
+.img-selo{
+  width: 115px;
+  margin: -207px 155px 0;
+}
+
 @media (max-width: 1500px) {
   body {
     background: url("../imgs/background_branco.jpg") repeat;
@@ -300,6 +305,9 @@ button {
 }
 
 @media (max-width: 1000px) {
+  .img-selo{
+    margin-left: 0;
+  }
   .painel-sustentabilidade {
     display: flex;
     flex-direction: column;
@@ -380,6 +388,11 @@ button {
 }
 
 @media screen and (max-width: 700px) {
+  
+  .img-selo{
+    margin: 15px auto -10px auto;
+    display: block;
+  }
   .video-youtube {
     width: 320px;
     height: 180px;
